adminer.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 5
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /tmp
          - name: mysql-persistent-storage
            mountPath: /var/lib/php7
          - name: mysql-persistent-storage
            mountPath: /var/lib/php
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
        command: ["/bin/sh", "-c"]
        args: ["chown adminer:adminer /var/lib/mysql; chown adminer:adminer /var/lib/php; chown adminer:adminer /var/lib/php7; chown adminer:adminer /tmp; ADMINER_DESIGN=pappu687 php -S [::]:8080 -t /var/www/html"]
      volumes:
        - name: mysql-persistent-storage
          nfs:
            server: nfs-server.default.svc.cluster.local
            path: /adminer
