pgadmin-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        stage: canary
    spec:
      securityContext:
        runAsGroup: 5050
        runAsUser: 5050
        fsGroup: 5050
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:4.17
        ports:
        - containerPort: 5050
        volumeMounts:
          - name: pgadmin-persistent-storage
            mountPath: /var/lib/pgadmin
          - name: pgadmin-persistent-storage
            mountPath: /var/log/pgadmin
        args: [";chown -R pgadmin:pgadmin /pgadmin4; chown -R pgadmin:pgadmin /pgadmin4/*; chmod a+rwx /pgadmin4/*"]
      volumes:
        - name: pgadmin-persistent-storage
          nfs:
            server: nfs-server.default.svc.cluster.local
            path: /pgadmin
