ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     rewrite ^/pgadmin / break;
spec:
  rules:
  - http:
      paths:
      - path: /adminer
        backend:
          serviceName: "adminer"
          servicePort: 80
      - path: /pgadmin(/|$)(.*)
        backend:
          serviceName: "pgadmin"
          servicePort: 80
      - path: /adminer/*
        backend:
          serviceName: "adminer"
          servicePort: 80
      - path: /
        backend:
          serviceName: "pgadmin"
          servicePort: 80
